--- a/hello/templates/home.html
+++ b/hello/templates/home.html
@@ -2,11 +2,11 @@
 
 {% block contents %}
 <body>
-<div class="container">
+<div class="container" style="float:right;">
     <h1>Travel Log</h1>
     {%for blog in posts%}
     <br>
-    <div class="card-deck" style="width:80%; height:25%;">
+    <div class="card-deck" style="width:50%; height:25%;">
         <div class="card">
             <a href="{% url 'detail' blog.id %}">
             <img src="..." class="card-img-top" alt="...">
